feat: Use nixpkgs to resolve `with` liveness
Since 7683220f we always mark nested `with` expressions alive. This is
technically sound because, indeed, there's no general way to determine
whether a particular attribute comes from one of the nested `with`s.

Sadly, this change made it impossible to detect common problematic
patterns in nixpkgs tree like:

```
meta = with lib; {
  maintainers = with lib.maintainers; [ ... ];
};
```

This would be very useful in our ongoing attempt to automate cleanup of
these patterns from the whole `nixpkgs` tree, see:

https://github.com/technowledgy/refactor-tractor/pull/14

This change attempts to address this problem. It is observed that nixd
completion controllers already use nixpkgs attrset and heuristics to
look for known attributes in `pkgs` and `lib`, assuming these belong to
nixpkgs. We can do the same when analysing `with` scopes.

1. This patch reuses the existing nixpkgs client infrastructure for
   `Sema/VariableLookup.cpp`. Since variable analysis is part of
   `libnixf` while nixpkgs client and LSP are part of `nixd`, we have to
   relocate a number of modules plus the `nixd-attrset-eval` tool
   outside the `nixd` directory under `common`.

2. The `nixd-attrset-eval` tool was truncating the number of returned
   values by 30, which is useful for interactive use in completion
   helper context, but is not enough for comprehensive variable scope
   analysis. For this reason, the json protocol for the tool was
   extended to support `MaxItems` attribute that can be set to `0` to
   indicate that no truncation should occur.

3. On performance optimizations: The new nixpkgs client is initialized
   once per call to `VLA`. It will load and cache discovered attributes
   as needed for the `with` resolution procedure. (In the future, it may
   be used for other needs as needed.)

   Note: It could be beneficial to allow reuse of the same nixpkgs
   client with its cached results across multiple calls to `VLA`. This
   is left

--- a/libnixf/meson.build
+++ b/libnixf/meson.build
@@ -9,6 +9,8 @@ boost = dependency('boost')
 gtest = dependency('gtest')
 gtest_main = dependency('gtest_main')
 
+nixd_common = dependency('nixd-common', fallback : ['common', 'nixd_common'])
+
 pkgconfig = import('pkgconfig')
 
 
