--- a/libnixf/src/meson.build
+++ b/libnixf/src/meson.build
@@ -1,6 +1,6 @@
-libnixf_deps = [ boost, nlohmann_json ]
-
 libnixf_inc = include_directories('../include')
+
+libnixf_deps = [ boost, nlohmann_json, nixd_common ]
 
 python3 = find_program('python3')
 
@@ -77,3 +77,5 @@ nixf = declare_dependency(
 
 
 install_subdir('../include/nixf', install_dir: 'include')
+
+meson.override_dependency('nixf', nixf)
