Enable independent builds for subprojects

--- a/nixd/lib/meson.build
+++ b/nixd/lib/meson.build
@@ -1,4 +1,4 @@
-libnixd_include = include_directories('../include', '../../common/include')
+libnixd_include = include_directories('../include')
 
 libnixd_deps = [ nixd_common, nixf, llvm, nixt ]
 
