--- a/nixd/meson.build
+++ b/nixd/meson.build
@@ -29,13 +29,14 @@ add_project_arguments([
 
 gtest = dependency('gtest')
 gtest_main = dependency('gtest_main')
-nixf = dependency('nixf')
-nixt = dependency('nixt')
 llvm = dependency('llvm')
+
+nixf = dependency('nixf', fallback : ['libnixf', 'nixf'])
+nixt = dependency('nixt', fallback : ['libnixt', 'nixt'])
+nixd_common = dependency('nixd-common', fallback : ['common', 'nixd_common'])
 
 pkgconfig = import('pkgconfig')
 
 
-subdir('lspserver')
 subdir('lib')
 subdir('tools')
